# paradigmasTP2

./: README.md  ejercicio1  makefile
Ejercicio_1/: CMakeLists.txt  main1.cpp
Ejercicio_1/headers/: pokedex.hpp  pokemon.hpp  pokemoninfo.hpp
Ejercicio_1/sources/: pokedex.cpp  pokemon.cpp  pokemoninfo.cpp
Ejercicio_2/: CMakeLists.txt  main2.cpp
Ejercicio_2/headers/: drones.hpp
Ejercicio_2/sources/: drones.cpp
Ejercicio_3/: CMakeLists.txt  main3  main3.cpp
pokemon/: pokemon.cpp  pokemon.hpp
pokemoninfo/: pokemoninfo.cpp  pokemoninfo.hpp
